<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_pon_f04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/pon_f04"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bc_pon_f04"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_pon_f04"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_pon_f04" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_pon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/pon"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bc_pon"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_pon"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_pon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_pov"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/pov"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bc_pov"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_pov"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_pov" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_asim_f04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/asim_f04"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bc_asim_f04"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_asim_f04"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_asim_f04" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_prev_limit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/prev_limit"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/bc_prev_limit"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/bc_prev_limit"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_prev_limit" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>




